# learning-haskell

./: README.md
playgrounds/BookWalkthroughs.hsproj/: .uuid
playgrounds/BookWalkthroughs.hsproj/RealWorldHaskell/: BookWalkthroughs.cabal  stack.yaml
playgrounds/BookWalkthroughs.hsproj/RealWorldHaskell/Chapter001/: GettingStarted.hs  _GettingStarted.hsplay
playgrounds/BookWalkthroughs.hsproj/RealWorldHaskell/Chapter002/: Types.hs  _Types.hsplay
playgrounds/BookWalkthroughs.hsproj/RealWorldHaskell/Chapter003/: Add.hs  AlgebraicVector.hs  BookStore.hs  Bool.hs  Distinction.hs  Exercises.hs  Lending.hs  ListADT.hs  Nullable.hs  Roygbiv.hs  ShapeUnion.hs  Tuple.hs  _Add.hsplay  _BookStore.hsplay  _Exercises.hsplay  _Lending.hsplay  _Roygbiv.hsplay  _Tuple.hsplay
playgrounds/BookWalkthroughs.hsproj/RealWorldHaskell/Chapter004/: Adler32.hs  Exercises.hs  Fold.hs  IntParse.hs  InteractWith.hs  SplitLines.hs  _Adler32.hsplay  _Exercises.hsplay  _IntParse.hsplay  _InteractWith.hsplay  _SplitLines.hsplay
playgrounds/OnlineTutorials.hsproj/: .uuid
playgrounds/OnlineTutorials.hsproj/IOMonad/: IOMonad.cabal  Main.hs  _Main.hsplay
projects/exercism-haskell-track/haskell/: sync_to_git.sh
projects/exercism-haskell-track/haskell/hello-world/: .solution.json
projects/haskell-for-madmen/: README.md
projects/haskell-for-madmen/HelloMonad/: .gitignore  ChangeLog.md  README.md  package.yaml
projects/haskell-for-madmen/HelloMonad/app/: Main.hs
projects/haskell-for-madmen/HelloMonad/src/: Lib.hs
projects/scotty-hello-world/scotty-hello/: Main.hs
projects/scotty-todo-backend/todo-backend/: dev.sqlite3  test.httpie  todo-backend.cabal
projects/scotty-todo-backend/todo-backend/app/: Main.hs
projects/scotty-todo-backend/todo-backend/src/TodoBackend/: Configuration.hs  Model.hs  Utils.hs
projects/servant-todo-backend/todo-backend/: CHANGELOG.md  todo-backend.cabal
projects/servant-todo-backend/todo-backend/src/: Api.hs  Database.hs  Models.hs
projects/setup-haskell-in-vscode/: README.md  package.yaml
projects/setup-haskell-in-vscode/src/Phoityne/Example/: Math.hs
projects/setup-haskell-in-vscode/test/: SpecHelper.hs
src/: Lib.hs
test/Phoityne/Example/: MathSpec.hs
