name: BookWalkthroughs
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 8.0.2-9.6-2
x-last-ide-version: HfM1.6.1

executable RealWorldHaskell
    main-is: Main.hs
    build-depends:
        base -any
    default-language: Haskell2010
    other-modules:
        Chapter004.SplitLines
        Chapter004.Fold
        Chapter004.Exercises
        Chapter004.IntParse
        Chapter004.Adler32
        Chapter004.InteractWith
        Chapter003.AlgebraicVector
        Chapter003.ListADT
        Chapter003.Roygbiv
        Chapter003.ShapeUnion
        Chapter003.Bool
        Chapter003.BookStore
        Chapter003.Tuple
        Chapter003.Nullable
        Chapter003.Exercises
        Chapter003.Distinction
        Chapter003.Add
        Chapter003.Lending
        Chapter002.Types
        Chapter001.GettingStarted

